ci: fix memory leak reporting caused by ovn-controller crashes
Signed-off-by: zhangzujian <zhangzujian.7@gmail.com>

--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -488,10 +488,11 @@ jobs:
 
       - name: Check valgrind result
         run: |
-          kubectl -n kube-system rollout restart deploy ovn-central
           kubectl -n kube-system rollout restart ds ovs-ovn
-          kubectl -n kube-system rollout status deploy ovn-central
           kubectl -n kube-system rollout status ds ovs-ovn
+          sleep 10
+          kubectl -n kube-system rollout restart deploy ovn-central
+          kubectl -n kube-system rollout status deploy ovn-central
           while true; do
             if [ $(kubectl -n kube-system get pod -l app=ovs -o name | wc -l) -eq $(kubectl get node -o name | wc -l) ]; then
               break
@@ -644,10 +645,11 @@ jobs:
 
       - name: Check valgrind result
         run: |
-          kubectl -n kube-system rollout restart deploy ovn-central
           kubectl -n kube-system rollout restart ds ovs-ovn
-          kubectl -n kube-system rollout status deploy ovn-central
           kubectl -n kube-system rollout status ds ovs-ovn
+          sleep 10
+          kubectl -n kube-system rollout restart deploy ovn-central
+          kubectl -n kube-system rollout status deploy ovn-central
           while true; do
             if [ $(kubectl -n kube-system get pod -l app=ovs -o name | wc -l) -eq $(kubectl get node -o name | wc -l) ]; then
               break
@@ -775,10 +777,11 @@ jobs:
 
       - name: Check valgrind result
         run: |
-          kubectl -n kube-system rollout restart deploy ovn-central
           kubectl -n kube-system rollout restart ds ovs-ovn
-          kubectl -n kube-system rollout status deploy ovn-central
           kubectl -n kube-system rollout status ds ovs-ovn
+          sleep 10
+          kubectl -n kube-system rollout restart deploy ovn-central
+          kubectl -n kube-system rollout status deploy ovn-central
           while true; do
             if [ $(kubectl -n kube-system get pod -l app=ovs -o name | wc -l) -eq $(kubectl get node -o name | wc -l) ]; then
               break
@@ -929,10 +932,11 @@ jobs:
 
       - name: Check valgrind result
         run: |
-          kubectl -n kube-system rollout restart deploy ovn-central
           kubectl -n kube-system rollout restart ds ovs-ovn
-          kubectl -n kube-system rollout status deploy ovn-central
           kubectl -n kube-system rollout status ds ovs-ovn
+          sleep 10
+          kubectl -n kube-system rollout restart deploy ovn-central
+          kubectl -n kube-system rollout status deploy ovn-central
           while true; do
             if [ $(kubectl -n kube-system get pod -l app=ovs -o name | wc -l) -eq $(kubectl get node -o name | wc -l) ]; then
               break
