--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -437,10 +437,11 @@ jobs:
 
       - name: Check valgrind result
         run: |
-          kubectl -n kube-system rollout restart deploy ovn-central
-          kubectl -n kube-system rollout status deploy ovn-central
           kubectl -n kube-system delete po -l app=ovs
           kubectl -n kube-system wait pod -l app=ovs --for condition=Ready --timeout=90s
+          sleep 10
+          kubectl -n kube-system rollout restart deploy ovn-central
+          kubectl -n kube-system rollout status deploy ovn-central
           while true; do
             if [ ! -z "$(kubectl -n kube-system get ep ovn-nb -o jsonpath='{.subsets}')" ]; then
               break
@@ -593,10 +594,11 @@ jobs:
 
       - name: Check valgrind result
         run: |
-          kubectl -n kube-system rollout restart deploy ovn-central
-          kubectl -n kube-system rollout status deploy ovn-central
           kubectl -n kube-system delete po -l app=ovs
           kubectl -n kube-system wait pod -l app=ovs --for condition=Ready --timeout=90s
+          sleep 10
+          kubectl -n kube-system rollout restart deploy ovn-central
+          kubectl -n kube-system rollout status deploy ovn-central
           while true; do
             if [ ! -z "$(kubectl -n kube-system get ep ovn-nb -o jsonpath='{.subsets}')" ]; then
               break
@@ -880,10 +882,11 @@ jobs:
 
       - name: Check valgrind result
         run: |
-          kubectl -n kube-system rollout restart deploy ovn-central
-          kubectl -n kube-system rollout status deploy ovn-central
           kubectl -n kube-system delete po -l app=ovs
           kubectl -n kube-system wait pod -l app=ovs --for condition=Ready --timeout=90s
+          sleep 10
+          kubectl -n kube-system rollout restart deploy ovn-central
+          kubectl -n kube-system rollout status deploy ovn-central
           while true; do
             if [ ! -z "$(kubectl -n kube-system get ep ovn-nb -o jsonpath='{.subsets}')" ]; then
               break
@@ -1021,10 +1024,11 @@ jobs:
 
       - name: Check valgrind result
         run: |
-          kubectl -n kube-system rollout restart deploy ovn-central
-          kubectl -n kube-system rollout status deploy ovn-central
           kubectl -n kube-system delete po -l app=ovs
           kubectl -n kube-system wait pod -l app=ovs --for condition=Ready --timeout=90s
+          sleep 10
+          kubectl -n kube-system rollout restart deploy ovn-central
+          kubectl -n kube-system rollout status deploy ovn-central
           while true; do
             if [ ! -z "$(kubectl -n kube-system get ep ovn-nb -o jsonpath='{.subsets}')" ]; then
               break
