ovn: reduce down time during upgrading from version 21.06 (#3881)
Signed-off-by: zhangzujian <zhangzujian.7@gmail.com>

--- a/charts/kube-ovn/templates/upgrade-ovs-ovn.yaml
+++ b/charts/kube-ovn/templates/upgrade-ovs-ovn.yaml
@@ -140,7 +140,7 @@ spec:
             - name: ENABLE_SSL
               value: "{{ .Values.networking.ENABLE_SSL }}"
             - name: OVN_DB_IPS
-              value: "{{ .Values.MASTER_NODES | default (include "kubeovn.nodeIPs" .) }}"
+              value: "{{ .Values.MASTER_NODES }}"
           command:
             - bash
             - -eo
