--- a/charts/kube-ovn/values.yaml
+++ b/charts/kube-ovn/values.yaml
@@ -47,6 +47,7 @@ networking:
   ENABLE_METRICS: true
   NODE_LOCAL_DNS_IP: ""
   PROBE_INTERVAL: 180000
+  OVN_NORTHD_PROBE_INTERVAL: 5000
   OVN_LEADER_PROBE_INTERVAL: 5
   OVN_REMOTE_PROBE_INTERVAL: 10000
   OVN_REMOTE_OPENFLOW_INTERVAL: 180
