chart: fix ovs-ovn update strategy
Signed-off-by: zhangzujian <zhangzujian.7@gmail.com>

--- a/charts/kube-ovn/Chart.yaml
+++ b/charts/kube-ovn/Chart.yaml
@@ -22,3 +22,5 @@ version: 1.13.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.13.0"
+
+kubeVersion: ">= 1.23.0"
