--- a/charts/kube-ovn/Chart.yaml
+++ b/charts/kube-ovn/Chart.yaml
@@ -22,3 +22,5 @@ version: v1.12.4-mc
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "v1.12.4-mc"
+
+kubeVersion: ">= 1.23.0"
