--- a/charts/kube-ovn/Chart.yaml
+++ b/charts/kube-ovn/Chart.yaml
@@ -22,3 +22,5 @@ version: v1.12.11
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.12.11"
+
+kubeVersion: ">= 1.23.0"
