refactor kubevirt vm e2e (#3914)
Signed-off-by: zhangzujian <zhangzujian.7@gmail.com>

--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -627,6 +627,7 @@ jobs:
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
+          VERSION=$version make kind-install
           VERSION=$version make kind-install-kubevirt
 
       - name: Run E2E
