check kube ovn pod restarts
Signed-off-by: bobz965 <zhangbingbing2_yewu@cmss.chinamobile.com>

--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -473,6 +473,11 @@ jobs:
           E2E_NETWORK_MODE: ${{ matrix.mode }}
         run: make k8s-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -630,6 +635,11 @@ jobs:
         working-directory: ${{ env.E2E_DIR }}
         run: make k8s-netpol-e2e
 
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -761,6 +771,11 @@ jobs:
       - name: Run E2E
         working-directory: ${{ env.E2E_DIR }}
         run: make cyclonus-netpol-e2e
+
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
 
       - name: kubectl ko log
         if: failure()
@@ -917,6 +932,11 @@ jobs:
           E2E_NETWORK_MODE: ${{ matrix.mode }}
         run: make kube-ovn-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1065,6 +1085,11 @@ jobs:
           E2E_IP_FAMILY: ${{ matrix.ip-family }}
         run: make kube-ovn-ic-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1134,6 +1159,10 @@ jobs:
           ENABLE_SSL: "${{ matrix.ssl }}"
         run: make kind-install-chart
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+
       - name: Uninstall Kube-OVN
         run: make kind-uninstall-chart
 
@@ -1179,6 +1208,10 @@ jobs:
 
       - name: Install Kube-OVN
         run: make kind-install-underlay-logical-gateway-dual
+
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
 
       - name: Cleanup
         run: sh -x dist/images/cleanup.sh
@@ -1228,6 +1261,10 @@ jobs:
           ENABLE_LB: "false"
         run: make kind-install
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+
       - name: Cleanup
         run: sh -x dist/images/cleanup.sh
 
@@ -1275,6 +1312,10 @@ jobs:
         env:
           ENABLE_NP: "false"
         run: make kind-install
+
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
 
       - name: Cleanup
         run: sh -x dist/images/cleanup.sh
@@ -1381,6 +1422,10 @@ jobs:
           E2E_BRANCH: ${{ github.base_ref || github.ref_name }}
         run: make kube-ovn-lb-svc-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+
   kubevirt-e2e:
     name: Kubevirt VM E2E
     needs:
@@ -1475,6 +1520,10 @@ jobs:
         env:
           E2E_BRANCH: ${{ github.base_ref || github.ref_name }}
         run: make kube-ovn-kubevirt-e2e
+
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
 
   webhook-e2e:
     name: Webhook E2E
@@ -1571,6 +1620,11 @@ jobs:
           E2E_BRANCH: ${{ github.base_ref || github.ref_name }}
         run: make kube-ovn-webhook-e2e
 
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1626,6 +1680,11 @@ jobs:
 
       - name: Install Kube-OVN
         run: make kind-install
+
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
 
       - name: kubectl ko log
         if: failure()
@@ -1758,6 +1817,11 @@ jobs:
           E2E_NETWORK_MODE: ${{ matrix.mode }}
         run: make k8s-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1888,6 +1952,11 @@ jobs:
           make kube-ovn-security-e2e
           make kube-ovn-ha-e2e
 
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1977,6 +2046,11 @@ jobs:
       - name: Run E2E
         working-directory: ${{ env.E2E_DIR }}
         run: make kube-ovn-submariner-conformance-e2e
+
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
 
       - name: kubectl ko log
         if: failure()
@@ -2096,6 +2170,11 @@ jobs:
           E2E_BRANCH: ${{ github.base_ref || github.ref_name }}
         run: make iptables-vpc-nat-gw-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
+
       - name: kubectl ko log
         if: failure()
         run: |
@@ -2209,6 +2288,24 @@ jobs:
           E2E_BRANCH: ${{ github.base_ref || github.ref_name }}
         run: make ovn-vpc-nat-gw-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
+
+      - name: kubectl ko log
+        if: failure()
+        run: |
+          make kubectl-ko-log
+          mv kubectl-ko-log.tar.gz iptables-vpc-nat-gw-conformance-e2e-ko-log.tar.gz
+
+      - name: upload kubectl ko log
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: iptables-vpc-nat-gw-conformance-e2e-ko-log
+          path: iptables-vpc-nat-gw-conformance-e2e-ko-log.tar.gz
+          
   push:
     name: Push Images
     needs:
