--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -105,6 +105,11 @@ jobs:
           E2E_NETWORK_MODE: ${{ matrix.mode }}
         run: make k8s-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
+
   k8s-netpol-e2e:
     name: Kubernetes Network Policy E2E
     runs-on: ubuntu-22.04
@@ -187,6 +192,11 @@ jobs:
       - name: Run E2E
         run: make k8s-netpol-e2e
 
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
+
   cyclonus-netpol-e2e:
     name: Cyclonus Network Policy E2E
     runs-on: ubuntu-22.04
@@ -245,6 +255,11 @@ jobs:
 
       - name: Run E2E
         run: make cyclonus-netpol-e2e
+
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
 
   kube-ovn-conformance-e2e:
     name: Kube-OVN Conformance E2E
@@ -330,6 +345,11 @@ jobs:
           E2E_NETWORK_MODE: ${{ matrix.mode }}
         run: make kube-ovn-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
+
   kube-ovn-ic-conformance-e2e:
     name: Kube-OVN IC Conformance E2E
     runs-on: ubuntu-22.04
@@ -404,6 +424,11 @@ jobs:
           E2E_BRANCH: ${{ matrix.branch }}
         run: make kube-ovn-ic-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        if: !failure()
+        run: |
+          make check-kube-ovn-pod-restarts
+
   underlay-logical-gateway-installation-test:
     name: Underlay Logical Gateway Installation Test
     runs-on: ubuntu-22.04
@@ -450,6 +475,10 @@ jobs:
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
           VERSION=$version make kind-install-underlay-logical-gateway-dual
+
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
@@ -504,6 +533,10 @@ jobs:
           docker pull kubeovn/kube-ovn:$version
           VERSION=$version make kind-install
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: sh dist/images/cleanup.sh
@@ -556,6 +589,10 @@ jobs:
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
           VERSION=$version make kind-install
+
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
@@ -635,6 +672,10 @@ jobs:
       - name: Run E2E
         run: make kube-ovn-lb-svc-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+
   kubevirt-e2e:
     name: Kubevirt VM E2E
     runs-on: ubuntu-22.04
@@ -708,6 +749,10 @@ jobs:
       - name: Run E2E
         run: make kube-ovn-kubevirt-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+
   webhook-e2e:
     name: Webhook E2E
     runs-on: ubuntu-22.04
@@ -779,6 +824,10 @@ jobs:
       - name: Run E2E
         run: make kube-ovn-webhook-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+
   installation-compatibility-test:
     name: Installation Compatibility Test
     runs-on: ubuntu-22.04
@@ -824,6 +873,10 @@ jobs:
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
           VERSION=$version make kind-install
+
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
@@ -912,6 +965,10 @@ jobs:
         env:
           E2E_CILIUM_CHAINING: "true"
         run: make k8s-conformance-e2e
+
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
@@ -1006,6 +1063,10 @@ jobs:
         run: |
           make kube-ovn-security-e2e
           make kube-ovn-ha-e2e
+
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
 
       - name: Cleanup
         run: sh dist/images/cleanup.sh
@@ -1108,6 +1169,10 @@ jobs:
           E2E_BRANCH: ${{ env.VERSION_TO }}
         run: make k8s-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ env.VERSION_TO }}
         run: sh dist/images/cleanup.sh
@@ -1165,6 +1230,10 @@ jobs:
 
       - name: Run E2E
         run: make kube-ovn-submariner-conformance-e2e
+
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
@@ -1240,6 +1309,10 @@ jobs:
       - name: Run E2E
         run: make iptables-vpc-nat-gw-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+
   ovn-vpc-nat-gw-conformance-e2e:
     name: OVN VPC NAT Gateway E2E
     runs-on: ubuntu-22.04
@@ -1309,3 +1382,7 @@ jobs:
 
       - name: Run E2E
         run: make ovn-vpc-nat-gw-conformance-e2e
+
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
