--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -473,6 +473,10 @@ jobs:
           E2E_NETWORK_MODE: ${{ matrix.mode }}
         run: make k8s-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: kubectl ko log
         if: failure()
         run: |
@@ -630,6 +634,10 @@ jobs:
         working-directory: ${{ env.E2E_DIR }}
         run: make k8s-netpol-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: kubectl ko log
         if: failure()
         run: |
@@ -762,6 +770,10 @@ jobs:
         working-directory: ${{ env.E2E_DIR }}
         run: make cyclonus-netpol-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: kubectl ko log
         if: failure()
         run: |
@@ -920,6 +932,10 @@ jobs:
           make kind-install-kubevirt
           make kube-ovn-kubevirt-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1068,6 +1084,10 @@ jobs:
           E2E_IP_FAMILY: ${{ matrix.ip-family }}
         run: make kube-ovn-ic-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1191,6 +1211,10 @@ jobs:
           E2E_IP_FAMILY: ${{ matrix.ip-family }}
         run: make kube-ovn-multus-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1255,6 +1279,10 @@ jobs:
           ENABLE_SSL: "${{ matrix.ssl }}"
         run: make kind-install-chart
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: Uninstall Kube-OVN
         run: make kind-uninstall-chart
 
@@ -1301,6 +1329,10 @@ jobs:
       - name: Install Kube-OVN
         run: make kind-install-underlay-logical-gateway-dual
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: Cleanup
         run: sh -x dist/images/cleanup.sh
 
@@ -1349,6 +1381,10 @@ jobs:
           ENABLE_LB: "false"
         run: make kind-install
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: Cleanup
         run: sh -x dist/images/cleanup.sh
 
@@ -1397,6 +1433,10 @@ jobs:
           ENABLE_NP: "false"
         run: make kind-install
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: Cleanup
         run: sh -x dist/images/cleanup.sh
 
@@ -1502,6 +1542,10 @@ jobs:
           E2E_BRANCH: ${{ github.base_ref || github.ref_name }}
         run: make kube-ovn-lb-svc-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+
   webhook-e2e:
     name: Webhook E2E
     needs:
@@ -1597,6 +1641,10 @@ jobs:
           E2E_BRANCH: ${{ github.base_ref || github.ref_name }}
         run: make kube-ovn-webhook-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1653,6 +1701,10 @@ jobs:
       - name: Install Kube-OVN
         run: make kind-install
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1784,6 +1836,10 @@ jobs:
           E2E_NETWORK_MODE: ${{ matrix.mode }}
         run: make k8s-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: kubectl ko log
         if: failure()
         run: |
@@ -1914,6 +1970,10 @@ jobs:
           make kube-ovn-security-e2e
           make kube-ovn-ha-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: kubectl ko log
         if: failure()
         run: |
@@ -2004,6 +2064,10 @@ jobs:
         working-directory: ${{ env.E2E_DIR }}
         run: make kube-ovn-submariner-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: kubectl ko log
         if: failure()
         run: |
@@ -2122,6 +2186,10 @@ jobs:
           E2E_BRANCH: ${{ github.base_ref || github.ref_name }}
         run: make iptables-vpc-nat-gw-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: kubectl ko log
         if: failure()
         run: |
@@ -2235,6 +2303,10 @@ jobs:
           E2E_BRANCH: ${{ github.base_ref || github.ref_name }}
         run: make ovn-vpc-nat-gw-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
   push:
     name: Push Images
     needs:
