--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -105,6 +105,10 @@ jobs:
           E2E_NETWORK_MODE: ${{ matrix.mode }}
         run: make k8s-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
   k8s-netpol-e2e:
     name: Kubernetes Network Policy E2E
     runs-on: ubuntu-22.04
@@ -187,6 +191,10 @@ jobs:
       - name: Run E2E
         run: make k8s-netpol-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
   cyclonus-netpol-e2e:
     name: Cyclonus Network Policy E2E
     runs-on: ubuntu-22.04
@@ -246,6 +254,10 @@ jobs:
       - name: Run E2E
         run: make cyclonus-netpol-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
   kube-ovn-conformance-e2e:
     name: Kube-OVN Conformance E2E
     runs-on: ubuntu-22.04
@@ -330,6 +342,10 @@ jobs:
           E2E_NETWORK_MODE: ${{ matrix.mode }}
         run: make kube-ovn-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
   kube-ovn-ic-conformance-e2e:
     name: Kube-OVN IC Conformance E2E
     runs-on: ubuntu-22.04
@@ -404,6 +420,10 @@ jobs:
           E2E_BRANCH: ${{ matrix.branch }}
         run: make kube-ovn-ic-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
   underlay-logical-gateway-installation-test:
     name: Underlay Logical Gateway Installation Test
     runs-on: ubuntu-22.04
@@ -451,6 +471,10 @@ jobs:
           docker pull kubeovn/kube-ovn:$version
           VERSION=$version make kind-install-underlay-logical-gateway-dual
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: sh dist/images/cleanup.sh
@@ -504,6 +528,10 @@ jobs:
           docker pull kubeovn/kube-ovn:$version
           VERSION=$version make kind-install
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: sh dist/images/cleanup.sh
@@ -557,6 +585,10 @@ jobs:
           docker pull kubeovn/kube-ovn:$version
           VERSION=$version make kind-install
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: sh dist/images/cleanup.sh
@@ -632,6 +664,10 @@ jobs:
           docker pull kubeovn/vpc-nat-gateway:$version
           VERSION=$version make kind-install-lb-svc
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: Run E2E
         run: make kube-ovn-lb-svc-conformance-e2e
 
@@ -706,6 +742,10 @@ jobs:
           VERSION=$version make kind-install
           VERSION=$version make kind-install-kubevirt
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: Run E2E
         run: make kube-ovn-kubevirt-e2e
 
@@ -780,6 +820,10 @@ jobs:
       - name: Run E2E
         run: make kube-ovn-webhook-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
   installation-compatibility-test:
     name: Installation Compatibility Test
     runs-on: ubuntu-22.04
@@ -830,6 +874,10 @@ jobs:
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: sh dist/images/cleanup.sh
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
   cilium-chaining-e2e:
     name: Cilium Chaining E2E
     runs-on: ubuntu-22.04
@@ -914,6 +962,10 @@ jobs:
           E2E_CILIUM_CHAINING: "true"
         run: make k8s-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: sh dist/images/cleanup.sh
@@ -1008,6 +1060,10 @@ jobs:
           make kube-ovn-security-e2e
           make kube-ovn-ha-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: Cleanup
         run: sh dist/images/cleanup.sh
 
@@ -1109,6 +1165,10 @@ jobs:
           E2E_BRANCH: ${{ env.VERSION_TO }}
         run: make k8s-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ env.VERSION_TO }}
         run: sh dist/images/cleanup.sh
@@ -1167,6 +1227,10 @@ jobs:
       - name: Run E2E
         run: make kube-ovn-submariner-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: sh dist/images/cleanup.sh
@@ -1241,6 +1305,10 @@ jobs:
       - name: Run E2E
         run: make iptables-vpc-nat-gw-conformance-e2e
 
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
   ovn-vpc-nat-gw-conformance-e2e:
     name: OVN VPC NAT Gateway E2E
     runs-on: ubuntu-22.04
@@ -1310,3 +1378,8 @@ jobs:
 
       - name: Run E2E
         run: make ovn-vpc-nat-gw-conformance-e2e
+
+      - name: Check kube ovn pod restarts
+        run: |
+          make check-kube-ovn-pod-restarts
+          
